--- a/Ganga/client/src/Components/Home/Footer/footer.module.css
+++ b/Ganga/client/src/Components/Home/Footer/footer.module.css
@@ -3,52 +3,48 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 35vh;
-  padding-top: 0px;
+  min-height: 55vh;
+  padding-top: 10px;
+  padding-right: 9.7px;
 }
 
 .titulo {
   font-family: Tahoma, sans-serif;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 26px;
   color: white;
   font-weight: bold;
-  padding-right: 1150px;
-  padding-top: 30px;
+  position: absolute;
+  right: 1150px;
+ margin-top: 55px;
 }
 
 .eslogan {
   font-family: Tahoma, sans-serif;
   font-size: 14px;
   color: rgb(255, 255, 255);
-  font-weight: normal;
-  padding-right: 1085px;
-  margin-top: -4px;
-}
-
-.tuEres {
-  font-family: Tahoma, sans-serif;
-  font-size: 20px;
-  color: rgb(255, 255, 255);
-  font-weight: normal;
-  padding-right: 500px;
-  margin-top: -50px;
+  font-weight: bold;
+  position: absolute;
+  right: 1245px;
+  margin-top: 68px;
 }
 
 .texTuEres {
   font-family: Tahoma, sans-serif;
   font-size: 14px;
-  color: rgb(213, 255, 145);
+  color: rgb(255, 255, 255);
   font-weight: normal;
-  padding-right: 500px;
-  margin-top: -4px;
+  position: absolute;
+  right: 800px;
+  left: 30px;
+  margin-top: 114px;
 }
 
 .vender {
   font-family: Tahoma, sans-serif;
   font-size: 20px;
   color: rgb(255, 255, 255);
-  font-weight: normal;
+  font-weight: bold;
   padding-left: 870px;
   margin-top: -110px;
 }
@@ -66,26 +62,28 @@
   font-family: Tahoma, sans-serif;
   font-size: 20px;
   color: rgb(255, 255, 255);
-  font-weight: normal;
-  padding-left: 150px;
-  margin-top: -110px;
+  font-weight: bold;
+  position: absolute;
+  left: 635px;
+  margin-top: 60px;
 }
 
 .textUbicacion {
   font-family: Tahoma, sans-serif;
   font-size: 14px;
-  color: rgb(213, 255, 145);
+  color: rgb(255, 255, 255);
   font-weight: normal;
-  padding-left: 150px;
-  margin-top: -4px;
+  position: absolute;
+  left: 635px;
+  margin-top: 110px;
 }
 
 .copyright {
   background-color: rgb(204, 217, 241);
-  width: 100%;
+  width: 100.7%;
   font-size: 14px;
   color: rgb(0, 0, 0);
   font-weight: normal;
   padding-left: 600px;
-  margin-top: 70px;
+  margin-top: 320px;
 }
