--- a/Ganga/client/src/Components/Panels/UserPanel/user.module.css
+++ b/Ganga/client/src/Components/Panels/UserPanel/user.module.css
@@ -21,12 +21,13 @@
 }
 .imgName {
     color: transparent;
-    width: 220px;
-    height: 180px;
+    width: 10px;
+    height: 10px;
     border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
+    align-content:center;
     flex-direction: column;
   }
   .perfil{
