--- a/Ganga/client/src/Components/ProductoId/productoId.module.css
+++ b/Ganga/client/src/Components/ProductoId/productoId.module.css
@@ -18,7 +18,7 @@
 .containerAll{
     position: relative;
     border-radius: 15px;
-    height: 80%;
+    min-height: 80%;
     width:90%;
     margin: 3% 3%;
     padding: 1%;
@@ -65,6 +65,7 @@
         font-family: "Mulish";
         font-weight: ExtraBold;
         margin-bottom: 7px;
+        padding: 10px;
         font-size: 2.5em;
         font-weight: 300;
         display: flex;
@@ -76,7 +77,14 @@
         margin-top: 10px;
         border-radius: 3px;
         color:#fdfeff;
-        font-size: 2.5rem;
+        font-size: 2.2rem;
+    }
+    .nombre{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        
     }
     .brand{
         margin-top: 15px;
@@ -161,7 +169,7 @@
         border: 4px solid #D0D0D0;
         background-color: #202020;
         color: rgb(255, 255, 255);
-        width:90%;
+        width:75%;
         border-radius: 7px;
         font-size: 30px;
         height: auto;
