--- a/Ganga/client/src/Components/Home/Home/home.module.css
+++ b/Ganga/client/src/Components/Home/Home/home.module.css
@@ -24,6 +24,24 @@
   padding-top: 200px;
 }
 
+.bgSomosGa {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  padding-top: 50px;
+}
+
+.containerSomosGa {
+  position: relative;
+  margin-top: 3%;
+  margin-left: 6%;
+  border-radius: 7px;
+}
+
+.imgSomosGa {
+  border-radius: 10px;
+}
+
 .hp {
   display: grid;
   position: right;
