--- a/Ganga/client/src/Components/ProductoId/productoId.module.css
+++ b/Ganga/client/src/Components/ProductoId/productoId.module.css
@@ -167,7 +167,7 @@
         font-weight: ExtraBold;
         padding: 8px;
         border: 4px solid #D0D0D0;
-        background-color: #202020;
+        background-color: rgb(0, 56, 82);
         color: rgb(255, 255, 255);
         width:75%;
         border-radius: 7px;
