--- a/Ganga/client/src/Components/ModifyProduct/modifyProduct.module.css
+++ b/Ganga/client/src/Components/ModifyProduct/modifyProduct.module.css
@@ -64,9 +64,7 @@
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
-.name{
-       
-}
+
 .price{
     margin-bottom: 25px;       
 }
@@ -132,22 +130,24 @@
 }
   .crear {
     background-color: rgb(131, 245, 131);
-    width: 200px;
     height: 35px;
-    color: honeydew;
-    border-radius: 23%;
-    border-width: 1px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-weight: bold;
+    color: rgba(55,65,81);
+    border-radius: 5%;
+    border-width: 3px;
     border-color: rgb(149, 207, 149);
-    padding-bottom: 10px;
 }
 
 .crear:hover {
     background-color: rgb(219, 248, 219);
-    width: 200px;
-    height: 40px;
-    color: rgb(77, 75, 75);
-    border-radius: 13%;
-    border-width: 2px;
+    font-weight: bold;
+    color: rgba(55,65,81);
+    border-radius: 5%;
+    border-width: 3px;
     border-color: rgb(0, 255, 0);
 }
 
