--- a/Ganga/client/src/Components/ProductoId/productoId.module.css
+++ b/Ganga/client/src/Components/ProductoId/productoId.module.css
@@ -63,20 +63,20 @@
 
     .name {
         font-family: "Mulish";
-        font-weight: ExtraBold;
+        font-weight: bold;
         margin-bottom: 7px;
         padding: 10px;
-        font-size: 2.5em;
-        font-weight: 300;
+        font-size: 26px;
+        /* font-weight: bold; */
         display: flex;
         justify-content: center;
         text-justify: center;
         align-items: center;
         flex-direction: column;
-        background-color: #003f91;
+        /* background-color:  rgb(0, 56, 82); */
         margin-top: 10px;
         border-radius: 3px;
-        color:#fdfeff;
+        color:#0c0c0c;
         font-size: 2.2rem;
     }
     .nombre{
@@ -151,6 +151,9 @@
         font-family: "Mulish";
         font-weight: Regular;
         color: #003f91;
+    }
+    .stock{
+        font-size: 20px;
     }
     
     .containerButton {
