--- a/Ganga/client/src/Components/ProductoId/productoId.module.css
+++ b/Ganga/client/src/Components/ProductoId/productoId.module.css
@@ -66,7 +66,7 @@
         font-weight: bold;
         margin-bottom: 7px;
         padding: 10px;
-        font-size: 26px;
+        font-size: 1.5rem;
         /* font-weight: bold; */
         display: flex;
         justify-content: center;
